test/TestPhases/parser/valid/importBox.blc

import mymod "box:package/a/b/file"

module

activity main()
end

