test/TestPhases/parser/invalid/importTooFarUp.blc
import mymod "../../adirector/mymod"

module

activity main()
end

